fixed spacing

--- a/css/layout.css
+++ b/css/layout.css
@@ -55,7 +55,7 @@ li a {
 
 a {
   font-family: 'Open Sans', sans-serif;
-  color: #81848f;
+  color: #515769;
   outline: 0;
 }
 
